CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/adr_latd__c.field-meta.xml
<CustomField>
    <fullName>adr_latd__c</fullName>
    <description>adr_latd</description>
    <externalDeveloperName>adr_latd</externalDeveloperName>
    <label>Address latitude</label>
    <length>11</length>
    <type>Text</type>
</CustomField>