CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/adr_lngtd__c.field-meta.xml
<CustomField>
    <fullName>adr_lngtd__c</fullName>
    <description>adr_lngtd</description>
    <externalDeveloperName>adr_lngtd</externalDeveloperName>
    <label>Address longitude</label>
    <length>11</length>
    <type>Text</type>
</CustomField>