CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/cde_source_vrfd_adr__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfd_adr__c</fullName>
    <description>cde_source_vrfd_adr</description>
    <externalDeveloperName>cde_source_vrfd_adr</externalDeveloperName>
    <label>How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>