CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/cde_type_adr__c.field-meta.xml
<CustomField>
    <fullName>cde_type_adr__c</fullName>
    <description>cde_type_adr</description>
    <externalDeveloperName>cde_type_adr</externalDeveloperName>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>