CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/cde_type_verif__c.field-meta.xml
<CustomField>
    <fullName>cde_type_verif__c</fullName>
    <description>cde_type_verif</description>
    <externalDeveloperName>cde_type_verif</externalDeveloperName>
    <label>Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>