CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/idn_sbsd_case_adr__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_adr__c</fullName>
    <description>idn_sbsd_case_adr</description>
    <externalDeveloperName>idn_sbsd_case_adr</externalDeveloperName>
    <label>Case Address ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_CASE_ADR__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE_ADR__c</referenceTo>
    <relationshipLabel>Case Address Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_case_adr_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>