CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_adr_hist__x/fields/nbr_seq_adr__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_adr__c</fullName>
    <description>nbr_seq_adr</description>
    <externalDeveloperName>nbr_seq_adr</externalDeveloperName>
    <label>Number Sequence address</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>